--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-body{
-
-}
 .main{
     background: url(Images/first.jpg);
      width: 100%;
@@ -43,14 +40,17 @@ nav ul{
     border-radius: 15px;
     padding: 4px 0px;
 }
+.icons{
+    margin-left: 20%;
+    margin-top: 1%;
+    gap: 40px;
+   
+}
 h2{
     font-size: 40px;
 }
-.box{
-    display: flex;
-}
 .btn2{
-    margin-left: 40%;
+    /* margin-left: 40%; */
     padding: 10px;
     background-color: #ffac7d;
 }
@@ -60,23 +60,23 @@ h2{
     background-color: #ffac7d;
 }
 #img1{
-    width: 20%;
-    height: 200px;
+    width: 95%;
+    height: 150px;
     margin: 20px;
 }
 #img2{
-    width: 20%;
-    height: 200px;
+    width: 95%;
+    height: 150px;
     margin: 20px;
 }
 #img3{
-    width: 20%;
-    height: 200px;
+    width: 95%;
+    height: 150px;
     margin: 20px;
 }
 #img4{
     width: 25%;
-    height: 200px;
+    height: 100px;
     margin: 20px;
 }
 #img5{
@@ -91,8 +91,9 @@ h2{
 }.main2{
     background-color: #002d3d;
 }
-.design h2{
+.design{
     color: #ffac7d;
+    padding-top: -10px;
 }
 .main4{
     background-color: #ffe5d6;
@@ -145,4 +146,76 @@ h2{
 .btn7{
  background-color: #ffac7d;
  padding: 4px 10px;
+}
+.circle{
+    /* border-width: 180%; */
+    border-radius: 60%;
+    background-color: #e9c6b2;
+    background: cover;
+    background: size;
+    /* padding-left: 100px;
+    padding-bottom:100px; */
+
+}
+.class2{
+    /* gap: 25px; */
+    width: 20%;
+    height: 150px;
+    /* margin: 20px */
+
+}
+.class1{
+    width: 20%;
+    height: 150px;
+    /* margin: 20px; */
+}
+.class3{
+    width: 20%;
+    height: 150px;
+    /* margin: 20px; */
+}
+.main3{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 34px;
+    height: 500px;
+    width: auto;
+    
+}
+.img9{
+    width: 60%;
+    height: 200px;
+}
+.img10{
+    width: 60%;
+    height: 200px;
+    
+}
+.img11{
+    width: 60%;
+    height: 200px;
+    /* margin: 10px; */
+}
+.Rustic{
+    color: white;
+}
+#img5{
+    height: 250px; 
+    width: 300px;
+}
+#img6{
+    height: 250px; 
+    width: 300px;
+}
+#img4{
+    height: 250px; 
+    width: 300px;
+}
+.divest{
+    display: flex;
+    gap: 75px;
+}
+.main1{
+    padding: 0px 0px 44px 0px;
 }
