--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ h2{
 }
 .btn2{
     /* margin-left: 40%; */
+    text-align: center;
     padding: 10px;
     background-color: #ffac7d;
 }
@@ -158,21 +159,22 @@ h2{
 
 }
 .class2{
-    /* gap: 25px; */
+    
     width: 20%;
     height: 150px;
-    /* margin: 20px */
+   
 
 }
 .class1{
     width: 20%;
     height: 150px;
-    /* margin: 20px; */
+   
 }
 .class3{
     width: 20%;
     height: 150px;
-    /* margin: 20px; */
+    margin-left: 15%;
+    
 }
 .main3{
     display: flex;
@@ -218,4 +220,31 @@ h2{
 }
 .main1{
     padding: 0px 0px 44px 0px;
+    height: 500px;
+    gap: 50px;
+}
+.msc{
+    display: flex;
+    gap: 440px;
+}
+.imag{
+    display: flex;
+    gap: 40px;
+}
+#id1{
+    height: 250px;
+    width: 40%;
+}
+#id2{
+    height: 250px;
+    width: 40%;
+}
+#id3{
+    height: 250px;
+    width: 40%;
+}
+.btn6{
+    background-color: #ffac7d;
+    margin-left: 40%;
+    padding: 10px;
 }
