--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .main{
-    background: url(Images/first.jpg);
+    background:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(Images/first.jpg);
      width: 100%;
      height: 800px;
      background-position: center;
@@ -247,4 +247,5 @@ h2{
     background-color: #ffac7d;
     margin-left: 40%;
     padding: 10px;
+    margin-top: 10%;
 }
